kube/charts/base/ci/rs-grpcRoutes-result.yaml
---
# Source: base-test/templates/loader.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: test-release
  namespace: default
spec:
  hostnames:
  - example.com
  parentRefs:
  - name: main-gateway
  rules:
  - backendRefs:
    - name: main-service
      port: 50051
    matches:
    - method:
        method: MyMethod
        service: myapp.v1.MyService
